--- a/html/main.html
+++ b/html/main.html
@@ -6,52 +6,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alura Home</title>
     <!-- style-->
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/products.css" />
   </head>
 
   <body>
     <header>
-      <h1 class="title">Barbearia Alura</h1>
+      <div class="box">
+        <h1><img src="/assets/logo.png" /></h1>
+
+        <nav>
+          <ul>
+            <li><a href="main.html"></a>Home</li>
+            <li><a href="products.html">Produtos</a></li>
+            <li><a href="contact.html">Contatos</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <img src="/assets/banner.jpg" alt="banner" id="banner" />
 
-    <div class="main">
-      <h2 class="title-centralized">Sobre a Barbearia Alura</h2>
+    <main>
+      <!-- principal -->
+      <section class="home">
+        <!-- titulo principal -->
+        <h2 class="title">Sobre a Barbearia Alura</h2>
 
-      <p>
-        Localizada no coração da cidade a <b>Barbearia Alura</b> traz para o
-        mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a
-        Barbearia Alura já é destaque na cidade e conquista novos clientes a
-        cada dia.
-      </p>
+        <img src="/assets/utensilios.jpg" alt="utensilios" class="utensils" />
 
-      <p id="missao">
-        <em>
-          Nossa missão é:
-          <b>"Proporcionar auto-estima e qualidade de vida aos clientes"</b>
-          .</em
-        >
-      </p>
+        <p>
+          Localizada no coração da cidade a <b>Barbearia Alura</b> traz para o
+          mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019,
+          a Barbearia Alura já é destaque na cidade e conquista novos clientes a
+          cada dia.
+        </p>
 
-      <p>
-        Oferecemos profissionais experientes e antenados às mudanças no mundo da
-        moda. O atendimento possui padrão de excelência e agilidade, garantindo
-        qualidade e satisfação dos nossos clientes.
-      </p>
-    </div>
+        <p id="missao">
+          <em>
+            Nossa missão é:
+            <b>"Proporcionar auto-estima e qualidade de vida aos clientes"</b>
+            .</em
+          >
+        </p>
 
-    <div class="container">
-      <h3 class="title-centralized">Benefícios</h3>
+        <p>
+          Oferecemos profissionais experientes e antenados às mudanças no mundo
+          da moda. O atendimento possui padrão de excelência e agilidade,
+          garantindo qualidade e satisfação dos nossos clientes.
+        </p>
+      </section>
+    </main>
+    <!-- mapa -->
+    <section class="map">
+      <!-- titulo principal -->
+      <h3 class="title">Nosso estabelecimento</h3>
+      <p>Nosso estabelecimento está localizado no coração da cidade.</p>
 
-      <ul>
-        <li class="itens">Atendimento aos clientes</li>
-        <li class="itens">Espaço diferenciado</li>
-        <li class="itens">Localização</li>
-        <li class="itens">Profissionais qualificados</li>
-      </ul>
+      <div class="map-content">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr"
+          width="100%"
+          height="300"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+        ></iframe>
+      </div>
+    </section>
 
-      <img src="/assets/beneficios.jpg" class="beneficio-img" />
-    </div>
+    <main>
+      <!-- beneficios -->
+      <section class="container">
+        <h3 class="title">Benefícios</h3>
+        <!-- conteudo beneficios -->
+        <div class="content">
+          <!-- lista beneficios -->
+          <ul class="content-itens">
+            <li class="itens">Atendimento aos clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais qualificados</li>
+            <li class="itens">Pontualidade</li>
+            <li class="itens">Limpeza</li>
+          </ul>
+          <!-- imagem beneficio -->
+          <img src="/assets/beneficios.jpg" class="content-img" />
+        </div>
+
+        <div class="video">
+          <iframe
+            width="100%"
+            height="315"
+            src="https://www.youtube.com/embed/wcVVXUV0YUY"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <img src="/assets/logo-branco.png" />
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
   </body>
 </html>
