--- a/html/products.html
+++ b/html/products.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header>
-      <div class="caixa">
+      <div class="box">
         <h1><img src="/assets/logo.png" alt="Logo alura" /></h1>
 
         <nav>
